src/objects/MentorCourseGroup__c.object
<CustomObject>
    <description>This table contains the course grouping for mentors. A common email, phone, etc.</description>
    <fields>
        <fullName>About__c</fullName>
        <label>About</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CourseGroupPhone__c</fullName>
        <label>Course Group Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>CourseNumber__c</fullName>
        <description>The course number for this grouping.</description>
        <label>Course Number</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GroupEmail__c</fullName>
        <description>This is the email used for the course</description>
        <label>Group Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GroupingActive__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If this grouping is active.</description>
        <label>Grouping Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hours__c</fullName>
        <description>The Hours this group is available.</description>
        <label>Hours</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>IsTestData__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Field to indicate if the record is a test record</description>
        <label>Is Test Data</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NEW_Id__c</fullName>
        <description>A temporary holding field for the new SF ID of this record (person account conversion).</description>
        <label>NEW_Id</label>
        <length>18</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>OLD_Id__c</fullName>
        <description>A temporary holding field for the SF ID of this record, to be used for data migration from a person account org to a non-person account org. Declared as External Id for Upsert operations via the SOAP, REST, or BULK APIs.</description>
        <externalId>true</externalId>
        <label>OLD_Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShowGroupOnly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Show Group Only</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>TableKey__c</fullName>
        <externalId>true</externalId>
        <label>Mentor Group TableKey</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>WGUCourse__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>WGU Course</label>
        <referenceTo>WGUCourse__c</referenceTo>
        <relationshipLabel>Mentor Course Groups</relationshipLabel>
        <relationshipName>Mentor_Course_Groups</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>Mentor Course Group</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mentor Course Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mentor Course Groups</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>